--- a/app/clour-rbac/src/main/resources/templates/controller.java.vm
+++ b/app/clour-rbac/src/main/resources/templates/controller.java.vm
@@ -3,11 +3,11 @@ import java.util.Map;
 import java.util.Date;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
-import com.github.pig.common.constant.CommonConstant;
+import org.clour.common.constant.CommonConstant;
 import com.baomidou.mybatisplus.mapper.EntityWrapper;
 import com.baomidou.mybatisplus.plugins.Page;
-import com.github.pig.common.util.Query;
-import com.github.pig.common.util.R;
+import org.clour.common.util.Query;
+import org.clour.common.util.R;
 import $!{package.Entity}.$!{entity};
 import $!{package.Service}.$!{entity}Service;
 #if($!{superControllerClassPackage})
